# edit

./: .clang-format  .clangd  CMakeLists.txt  README.md  editor.cpp  editor.hpp  highlight.cpp  highlight.hpp  main.cpp  math.c
